[package]
name = "tools"
version = "0.1.0"
authors = ["shhr1214 <souhei0079@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "battery"
path = "src/bin/battery.rs"

[dependencies]
battery = "0.7.4"
failure = "0.1.5"
